Actualización de comentarios, constructor, mejoras y validaciones en diferentes setters, arreglo issue de compatibilidad con método de java a una version antigua, y arreglo en nombre de variable en el método toString.